--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -32,8 +32,10 @@
 </nav>
 <div class="tab-content" id="nav-tabContent">
     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+        <br/>
+        <br/>
         <div>
-            <p th:text="${start}"></p>
+            <p th:text="${profile}"></p>
         </div>
     </div>
     <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">...</div>
