--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 
 <!-- Required meta tags -->
 <meta charset="utf-8"/>
@@ -37,19 +38,29 @@
 <div class="tab-content" id="nav-tabContent">
     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
         <br/>
-        <div class="row" style="padding: 20px">
+        <div class="row">
             <div class="col-md-3" style="padding: 20px">
-                <img src="photo/9u7ahfc.jpeg" width="200" height="280"/>
+                <img src="photo/9u7ahfc.jpeg" class="img-responsive img-rounded" width="200" height="280"/>
             </div>
-            <div class="col-md-2">
-                <div style="padding: 20px">
-                    <label style="color: black">Name</label>
-                    <br/>
-                    <label style="color: black">Data of birth</label>
-                </div>
+            <div class="col-md-3" style="padding: 20px">
+                <a style="color: black">Name:</a>
+                <br/>
+                <a style="color: black">Data of birth:</a>
+                <br/>
+                <a style="color: black">Nationality:</a>
+                <br/>
+                <a style="color: black">Email:</a>
+                <br/>
+                <a style="color: black">Site:</a>
             </div>
-            <div class="col-md-7" style="padding: 20px">
-                <p th:text="${name}"></p>
+            <div class="col-md-6" style="padding: 20px">
+                <a th:text="${name}"></a>
+                <br/>
+                <a th:text="${data}"></a>
+                <br/>
+                <a th:text="${nationality}"></a>
+                <br/>
+                <a th:text="${email}"></a>
                 <br/>
             </div>
         </div>
@@ -57,7 +68,6 @@
     <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">...</div>
     <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">...</div>
 </div>
-
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
