--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml"
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 
 <!-- Required meta tags -->
@@ -9,7 +9,6 @@
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
-<link rel="stylesheet" href="start.css"/>
 
 <head>
     <title>Summary</title>
@@ -72,7 +71,7 @@
                     <a th:text="*{email}"></a>
                     <br/>
                 </form>
-                <form method="post">
+                <form method="get">
                     <div th:each="elem:${site}">
                         <a th:text="${elem}" style="color:#0a51b4"></a>
                         <br/>
@@ -97,12 +96,24 @@
                 <form th:each="elem:${course}">
                     <tbody>
                     <tr>
-                        <td><small th:text="${elem.name}"></small></td>
-                        <td ><small th:text="${elem.site_name}"></small></td>
-                        <td ><small th:text="${elem.nameCourse}"></small></td>
-                        <td ><small th:text="${elem.data}"></small></td>
-                        <td ><small th:text="${elem.descriptions}"></small></td>
-                        <td ><small th:text="${elem.certificatePhoto}"></small></td>
+                        <td>
+                            <small th:text="${elem.name}"></small>
+                        </td>
+                        <td>
+                            <small th:text="${elem.site_name}"></small>
+                        </td>
+                        <td>
+                            <small th:text="${elem.nameCourse}"></small>
+                        </td>
+                        <td>
+                            <small th:text="${elem.data}"></small>
+                        </td>
+                        <td>
+                            <small th:text="${elem.descriptions}"></small>
+                        </td>
+                        <td>
+                            <small th:text="${elem.certificatePhoto}"></small>
+                        </td>
                     </tr>
                     </tbody>
                 </form>
@@ -110,9 +121,28 @@
         </div>
     </div>
     <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
-        <form th:action="@{/course}" method="post">dvsvsdsd
-            <p th:text="${qwe}"></p>
-        </form>
+        <div class="row" style="padding: 20px">
+            <div class="col-md-5">
+                <label>Education</label>
+            </div>
+            <div class="col-md-7">
+                <label>Descriptions</label>
+            </div>
+        </div>
+        <div th:each="elem:${education}">
+            <div class="row" style="padding: 20px">
+                <div class="col-md-5">
+                    <p>
+                    <small th:text="${elem.education}"></small>
+                    </p>
+                </div>
+                <div class="col-md-7">
+                    <p>
+                        <small th:text="${elem.description}"></small>
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <!-- Optional JavaScript -->
